--- a/index.html
+++ b/index.html
@@ -6,100 +6,70 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="manifest" href="manifest.json" />
   <style>
-    body{
-      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
-      background: #fff;          /* 纯白背景 */
-      color: #222;               /* 深灰文字 */
-      text-align: center;
-      margin: 0;
-      padding: 1rem;
-    }
-    #reader{
-      max-width: 400px;
-      margin: 1rem auto;
-      border: 2px solid #007bff; /* 蓝色边框 */
-      border-radius: 6px;
-    }
-    button{
-      margin: .5rem;
-      padding: .6rem 1.2rem;
-      font-size: 1rem;
-      background: #007bff;       /* 蓝色按钮 */
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover{
-      background: #0056b3;
-    }
-    ul{
-      max-height: 40vh;
-      overflow: auto;
-      text-align: left;
-      padding-left: 1.5rem;
-    }
-    li{
-      word-break: break-all;
-      margin: .25rem 0;
-    }
+    body{font-family:system-ui,Roboto,Helvetica,Arial,sans-serif;background:#fff;color:#222;text-align:center;margin:0;padding:1rem}
+    #reader{max-width:400px;margin:1rem auto;border:2px solid #007bff;border-radius:6px}
+    button{margin:.5rem;padding:.6rem 1.2rem;font-size:1rem;background:#007bff;color:#fff;border:none;border-radius:4px;cursor:pointer}
+    button:hover{background:#0056b3}
+    ul{max-height:40vh;overflow:auto;text-align:left;padding-left:1.5rem}
+    li{word-break:break-all;margin:.25rem 0}
   </style>
 </head>
 <body>
   <h2>QR 扫描器</h2>
   <div id="reader"></div>
+  <button id="btnAllow">允许提示音</button>
   <button onclick="exportCSV()">导出 CSV</button>
   <button onclick="clearHis()">清空记录</button>
   <ul id="list"></ul>
 
-  <!-- html5-qrcode  CDN -->
   <script src="https://unpkg.com/html5-qrcode@2.3.8/html5-qrcode.min.js"></script>
   <script>
-    /* --------------- 数据 --------------- */
-    const get = () => JSON.parse(localStorage.getItem('qr') || '[]');
-    const set = d => localStorage.setItem('qr', JSON.stringify(d));
+    /* ---------- 数据 ---------- */
+    const get=()=>JSON.parse(localStorage.getItem('qr')||'[]');
+    const set=d=>localStorage.setItem('qr',JSON.stringify(d));
 
-    /* --------------- 提示音 --------------- */
-    const beep = new Audio('data:audio/wav;base64,UklGRlJDAABXQVZFZm10IBAAAAABAAEARKwAAIhYAQACABAAZGF0YYZDAACAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIA');
+    /* ---------- 去重表：{二维码内容: 上次时间戳} ---------- */
+    const dupMap=new Map();
 
-    /* --------------- 渲染列表 --------------- */
-    function render() {
-      document.getElementById('list').innerHTML =
-        get().map(e => `<li>${e.t} - ${e.c}</li>`).join('');
+    /* ---------- 提示音 ---------- */
+    const beep=new Audio('data:audio/wav;base64,UklGRlJDAABXQVZFZm10IBAAAAABAAEARKwAAIhYAQACABAAZGF0YYZDAACAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIA');
+
+    /* 用户首次点击后，浏览器才允许播放声音 */
+    document.getElementById('btnAllow').addEventListener('click',()=>beep.play().catch(()=>{}));
+
+    /* ---------- 渲染 ---------- */
+    function render(){
+      document.getElementById('list').innerHTML=
+        get().map(e=>`<li>${e.t} - ${e.c}</li>`).join('');
     }
 
-    /* --------------- 导出 CSV --------------- */
-    function exportCSV() {
-      const rows = get().map(e => `"${e.t}","${e.c.replace(/"/g, '""')}"`);
-      const blob = new Blob([rows.join('\n')], { type: 'text/csv;charset=utf-8' });
-      const a = document.createElement('a');
-      a.href = URL.createObjectURL(blob);
-      a.download = 'scan_history.csv';
+    /* ---------- 导出 ---------- */
+    function exportCSV(){
+      const rows=get().map(e=>`"${e.t}","${e.c.replace(/"/g,'""')}"`);
+      const blob=new Blob([rows.join('\n')],{type:'text/csv;charset=utf-8'});
+      const a=document.createElement('a');
+      a.href=URL.createObjectURL(blob);
+      a.download='scan_history.csv';
       a.click();
     }
 
-    /* --------------- 清空记录 --------------- */
-    function clearHis() {
-      if (confirm('确定清空所有记录？')) {
-        set([]);
-        render();
-      }
+    /* ---------- 清空 ---------- */
+    function clearHis(){if(confirm('清空所有记录？')){set([]);render();}}
+
+    /* ---------- 扫码回调 ---------- */
+    function onScan(txt){
+      const now=Date.now();
+      if(dupMap.get(txt) && now-dupMap.get(txt)<3000) return; // 3 秒内重复无视
+      dupMap.set(txt,now);
+      beep.play().catch(()=>{});          // 能响就响，不响继续
+      const d=get(); d.unshift({t:new Date().toLocaleString(),c:txt}); set(d); render();
     }
 
-    /* --------------- 扫码成功回调 --------------- */
-    function onScan(txt) {
-      beep.play();
-      const d = get();
-      d.unshift({ t: new Date().toLocaleString(), c: txt });
-      set(d);
+    /* ---------- 启动 ---------- */
+    window.addEventListener('DOMContentLoaded',()=>{
       render();
-    }
-
-    /* --------------- 启动扫描 --------------- */
-    window.addEventListener('DOMContentLoaded', () => {
-      render();
-      const qr = new Html5Qrcode('reader');
-      qr.start({ facingMode: 'environment' }, { fps: 10 }, onScan, console.error);
+      const qr=new Html5Qrcode('reader');
+      qr.start({facingMode:'environment'},{fps:10},onScan,console.error);
     });
   </script>
 </body>
